set up local storage, made the past buttons appear with local storage to prevent dupes and wrapped everything in a documnet.ready jquery function; also added some screenshots

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,6 @@ section article {
   font-size: 1.1em;
   text-align: center;
 }
+aside form {
+  margin: 10px 0px 10px 0px;
+}
